[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonie"
# Version is derived from git via setuptools-scm — see [tool.setuptools_scm]
# below. Each commit on main produces a unique version string like
# 0.0.post47+g2122e65, so `pipx upgrade harmonie` actually upgrades.
dynamic = ["version"]
description = "Audio similarity service. Scans music libraries, extracts Essentia embeddings + descriptors, exposes an HTTP API for similarity queries and playlist generation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "essentia-tensorflow",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "platformdirs>=4.0",
    "tqdm>=4.65",
    "mutagen>=1.47",
    # Lets Pydantic models use ``X | None`` annotations on Python 3.9.
    # Pydantic re-evaluates annotations at runtime, so ``from __future__
    # import annotations`` alone isn't sufficient for the new union
    # syntax on 3.9.
    'eval_type_backport>=0.2; python_version < "3.10"',
]

[project.optional-dependencies]
classic = ["essentia"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # Cap httpx below 1.0: we install with ``--pre`` to pick up Essentia's
    # ``.dev`` build, which also pulls in httpx 1.0 pre-releases that have
    # removed ``BaseTransport`` — still imported by starlette's TestClient
    # in the 1.0 release line. Lift this cap once starlette publishes a
    # version compatible with httpx 1.0 final.
    "httpx>=0.27,<1.0",
    "ruff>=0.6",
]

[project.scripts]
harmonie = "harmonie.cli:main"

[tool.setuptools.packages.find]
include = ["harmonie*"]

[tool.setuptools_scm]
# Write the resolved version into the package at build time so the runtime
# can read it without re-querying git (which isn't available in a wheel).
version_file = "harmonie/_version.py"
# When installed outside a git checkout (e.g. from an sdist that didn't
# include git history), fall back to this rather than failing the build.
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


# ---------------------------------------------------------------------------
# Ruff: format + lint
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = [".venv", "data", "harmonie/_version.py"]

[tool.ruff.lint]
# Enabled rule families:
#   E, W  pycodestyle (style errors and warnings)
#   F     pyflakes (undefined names, unused imports, etc.)
#   I     isort (import ordering)
#   UP    pyupgrade (modernize syntax)
#   B     flake8-bugbear (likely bugs)
#   C4    flake8-comprehensions
#   SIM   flake8-simplify (de-duplicate logic)
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # Black/Ruff-formatter compatibility: line-length is the formatter's
    # job, not the linter's.
    "E501",
    # Bugbear's "do not use mutable default argument" — Pydantic
    # ``Field(default_factory=...)`` is the canonical pattern; keep it
    # readable.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use bare asserts and import shadowing for fixtures.
"tests/**" = ["B011", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
